--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <P>MELHOR DESENHO QUE JA ASSISTI</P>
         </div>
         <div>
-            <iframe<iframe width="560" height="315" src="https://www.youtube.com/embed/yAZxx8t9zig?si=6mjg0CAMoTg9ZAb8"
+            <iframe> width="560" height="315" src="https://www.youtube.com/embed/yAZxx8t9zig?si=6mjg0CAMoTg9ZAb8"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
