--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
     <header>ALURAFLIX</header>
     <section>
-        <div>
+        <div> class="chamada-texto"
             <h1>DIVERTIDAMENTE</h1>
             <P>MELHOR DESENHO QUE JA ASSISTI</P>
         </div>
         <div>
             <iframe> width="560" height="315" src="https://www.youtube.com/embed/yAZxx8t9zig?si=6mjg0CAMoTg9ZAb8"
-                title="YouTube video player" frameborder="0"
+                title="YouTube video player" 
+                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
