--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+    <section class="categoria">
+        <h2>filmes e séries</h2>
+        <div class="categoria videos">
+           <a href="https://www.youtube.com/embed/W76aoLlAgcQ?si=">
+            <img src="">
+           </a>
+
+        </div>
+
+    </section>
 </body>
 
 </html>
