--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <section class="categoria">
         <h2>filmes e séries</h2>
         <div class="categoria videos">
-           <a href="https://www.youtube.com/embed/W76aoLlAgcQ?si=">
-            <img src="">
+           <a href="https://www.youtube.com/watch?v=ly-GueGW3_s">
+            <img src="https://www.youtube.com/watch?v=maxflutued.jpg">
            </a>
 
         </div>
