--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>filmes e séries</h2>
         <div class="categoria videos">
            <a href="https://www.youtube.com/watch?v=ly-GueGW3_s">
-            <img src="https://www.youtube.com/watch?v=maxflutued.jpg">
+            <img src="https://www.youtube.com/watch?v=">
            </a>
 
         </div>
