--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
            <a href="https://www.youtube.com/watch?v=TbQm5doF_Uc">
             <img src="https://img.youtube.com/vi/nCmIwTbQm5doF_Ucmaxresdefault.jpg" />
            </a>
-           <a> href= "https://www.youtube.com/watch?v=t06RUxPbp_c"
+           <a href= "https://www.youtube.com/watch?v=t06RUxPbp_c" >
              <img src="https://img.youtube.com/vi/nCmIwt06RUxPbp_cmaxresdefault.jpg" />
            </a>
-           <a> href= "https://www.youtube.com/watch?v=P9-FCC6I7u0"
+           <a href= "https://www.youtube.com/watch?v=P9-FCC6I7u0" >
               <img src="https://img.youtube.com/vi/nCmIwP9-FCC6I7u0maxresdefault.jpg" />
            </a>
-           <a> href="https://www.youtube.com/watch?v=I6Gj8Fvukk4"
+           <a href="https://www.youtube.com/watch?v=I6Gj8Fvukk4">
             <img src="https://img.youtube.com/vi/nCmIwI6Gj8Fvukk4maxresdefault.jpg" />
            </a>
-           <a> href= "https://www.youtube.com/watch?v=TcwEnCIwDE4"
+           <a href= "https://www.youtube.com/watch?v=TcwEnCIwDE4" >
             <img src="https://img.youtube.com/vi/nCmIwTcwEnCIwDE4maxresdefault.jpg" />
            </a>
            
