--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
 <body>
     <header>ALURAFLIX</header>
-    <section> "chamada"
+    <section class="chamada" >
         <div class="chamada-texto">
             <h1>DIVERTIDAMENTE</h1>
             <P>#MELHOR DESENHO QUE JA ASSISTI</P>
         </div>
+
         <div>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/yAZxx8t9zig?si=6mjg0CAMoTg9ZAb8"
                 title="YouTube video player" 
@@ -38,7 +39,7 @@
              <img src="https://img.youtube.com/vi/nCmIwt06RUxPbp_cmaxresdefault.jpg" />
            </a>
            <a href= "https://www.youtube.com/watch?v=P9-FCC6I7u0" >
-              <img src="https://img.youtube.com/vi/nCmIwP9-FCC6I7u0maxresdefault.jpg" />
+            <img src="https://img.youtube.com/vi/nCmIwP9-FCC6I7u0maxresdefault.jpg" />
            </a>
            <a href="https://www.youtube.com/watch?v=I6Gj8Fvukk4">
             <img src="https://img.youtube.com/vi/nCmIwI6Gj8Fvukk4maxresdefault.jpg" />
