--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
 
     <section class="categoria">
         <h2>filmes e séries</h2>
-        <div class="categoria videos">
+        <div class="categoria-videos">
            <a href="https://www.youtube.com/watch?v=TbQm5doF_Uc">
-            <img src="https://img.youtube.com/vi/csTbQm5doF_Uc/maxresdefault.jpg" />
+            <img src="https://img.youtube.com/vi/TbQm5doF_Uc/maxresdefault.jpg"/>
            </a>
            <a href= "https://www.youtube.com/watch?v=t06RUxPbp_c" >
-             <img src="https://img.youtube.com/vi/nCmIwt06RUxPbp_c/maxresdefault.jpg" />
+             <img src="https://img.youtube.com/vi/nCmIwt06RUxPbp_c/maxresdefault.jpg"/>
            </a>
            <a href= "https://www.youtube.com/watch?v=P9-FCC6I7u0" >
-            <img src="https://img.youtube.com/vi/nCmIwP9-FCC6I7u0/maxresdefault.jpg" />
+            <img src="https://img.youtube.com/vi/nCmIwP9-FCC6I7u0/maxresdefault.jpg"/>
            </a>
            <a href="https://www.youtube.com/watch?v=I6Gj8Fvukk4">
-            <img src="https://img.youtube.com/vi/nCmIwI6Gj8Fvukk4/maxresdefault.jpg" />
+            <img src="https://img.youtube.com/vi/nCmIwI6Gj8Fvukk4/maxresdefault.jpg"/>
            </a>
            <a href= "https://www.youtube.com/watch?v=TcwEnCIwDE4" >
-            <img src="https://img.youtube.com/vi/nCmIwTcwEnCIwDE4/maxresdefault.jpg" />
+            <img src="https://img.youtube.com/vi/nCmIwTcwEnCIwDE4/maxresdefault.jpg"/>
            </a>
            
         </div>
